style.css
/* ============ Nav Bar ========= */
.nav{
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(46, 43, 43);
}
.nav-title{
    color: white;
    margin-left: 10px;
    font-family: 'Roboto', sans-serif;
}
.nav-links{
    display: flex;
    list-style: none;
    justify-content:space-around;
}
.nav-links li{
    margin-right: 10px;
    font-family: 'Roboto', sans-serif;

}
.nav-links li a{
    list-style: none;
    color: white;
    text-decoration: none;
}
/* .active{

} */
.btn{
    color: whitesmoke;
    background-color: rgb(65, 65, 231);
    border: 1px solid black;
    box-shadow: 2px 2px 1px black;
    font-family: 'Roboto', sans-serif;
}
/* Main Body */
.main-body{
    display: flex;
    justify-content:center;
    font-family: 'Roboto', sans-serif;

}
/* =======User Card============ */
.profile-info-container{
    width: 400px;
    border: 2px solid darkgray;
    margin-top: 50px;
    /* margin-left: 50px; */
}
.color-bar{
    background-color: rgb(66, 66, 255);
    height: 90px;
}
.profile-details{
    margin-top: 0px;
    margin-left: 40px;

}
h4{
    margin-top: 10px 0px;
}
.icon-images{
    height: 10px;
    width: 10px;
}
#user-icon{
    position: relative;
    top: -20px;
    height: 60px;
    width: 60px;
    margin-left: 60px;
}
.profile-details h2, .profile-details h4{
    margin: 0;
}
.edit{
    margin-bottom: 20px;
}

/* Education Card */
.education{
    border: 2px solid darkgray;
    width: 400px;
    display: flex;
    flex-direction: column;
    margin-top: 50px;
    /* margin-left: 50px; */

}
.ed-header{
    align-items: center;
    padding-left: 30px;
    background-color: rgb(34, 31, 31);
    color: whitesmoke;
}
.ed-body{
    margin-left: 30px;
}
/* People Requesting */
.connect-req{
    border: 2px solid darkgray;
    margin-top: 50px;
    width: 250px;
}
.con-req-header{
    display: flex;
    align-items: center;
    padding-left: 30px;
    background-color: rgb(34, 31, 31);
    color: whitesmoke;
}
.con-req-body{
    margin: 30px 20px;
}
.people-requesting img{
    height: 15px;
    width: 15px;
}
.people-requesting{
    display: flex;
    justify-content:space-between;

}
.people-requesting img, .people-requesting h3{
    display: inline-block;
    margin: 0;
}
#req-number{
    height: 25px;
    width: 25px;
    background-color: gray;
    padding-left:15px;
    padding-top: 5px;
    border-radius: 50%;
    margin-right: 5px;
    color: black;
}

/* Connections */
.connections{
    border: 2px solid darkgray;
    margin-top: 50px;
    width: 250px;
}
.connect-footer{
    border-top: 2px solid darkgray;
    margin-top: 20px;
    padding: 10px 30px;
;
}
.right-div{
    margin-right: 40px;
}
.left-div{
    margin-right: 40px;
}
.connected-people img, .connected-people h3{
    display: inline-block;
    margin: 0;
}
.connected-people img{
    height: 15px;
    width: 15px;
}
.connected-people{
    margin-top: 20px;
}
#connect-number{
    height: 20px;
    width: 40px;
    background-color: gray;
    padding-left:10px;
    border-radius: 50%;
    margin-right: 5px;
    color: black;
}

